--- a/Projects/Python/web_apps/data/new.html
+++ b/Projects/Python/web_apps/data/new.html
@@ -3,6 +3,11 @@
 <title> my title </title>
 </head>
 <body>
+	<div id="menu">
+		<table>
+			<tr><td>here we go</td></tr>
+		</table>
+	</div>
 	<input type="text"/>
 </body>
 </html>
