--- a/Projects/Python/fund/data/04_manager.html
+++ b/Projects/Python/fund/data/04_manager.html
@@ -33,7 +33,7 @@ $(function(){
               <td height="60" colspan="4" bgcolor="#fbfbfb" ><table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="2%">&nbsp;</td>
-                    <td width="95%" class="normal1">中国籍，芝加哥大学工商管理硕士，11年证券行业从业经验，曾任Froley&nbsp;Revy&nbsp;Investment&nbsp;Company分析师、中国建设银行（香港）资产组合经理。2008年6月加入国投瑞银基金管理有限公司基金投资部任高级研究员。2010年9月8日起任国投瑞银优化增强债券型证券投资基金基金经理，2011年12月20日起兼任国投瑞银瑞源保本混合型证券投资基金基金经理。</td>
+                    <td width="95%" class="normal1">中国籍，芝加哥大学工商管理硕士，11年证券行业从业经历，曾任Froley&nbsp;Revy&nbsp;Investment&nbsp;Company分析师、中国建设银行（香港）资产组合经理。2008年6月加入国投瑞银基金管理有限公司基金投资部任高级研究员。2010年9月8日起任国投瑞银优化增强债券型证券投资基金基金经理，2011年12月20日起兼任国投瑞银瑞源保本混合型证券投资基金基金经理。</td>
                     <td width="3%">&nbsp;</td>
                   </tr>
                 </table></td>
