--- a/Projects/Python/fund/data/06_manager.html
+++ b/Projects/Python/fund/data/06_manager.html
@@ -562,6 +562,22 @@ jQuery.ajax({
                 </div>
              </div>
         </dd>
+		<dd id="471028">
+             <div class="sn_namelist">
+                <a href="/main/products/pofund/471028/fundgk.shtml">汇添富理财28天A</a>
+                <div class="sn_tip">
+                	<p><P>本基金在追求本金安全，保持资产流动性的基础上，努力追求绝对收益，为基金份额持有人谋求资产的稳定增值。</P></p>
+                </div>
+             </div>
+        </dd>
+		<dd id="472028">
+             <div class="sn_namelist">
+                <a href="/main/products/pofund/472028/fundgk.shtml">汇添富理财28天B</a>
+                <div class="sn_tip">
+                	<p><P>同A类相比，B类首次申购最低金额为500万元，同A类销售服务费0.3%相比，B类销售服务费为0.01%。</P></p>
+                </div>
+             </div>
+        </dd>
    
 <!--理财产品结束-->		
 <dt>
